# mqmx

./: .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  ltmain.sh
Common/: CMakeLists.txt  OAMThreading.hpp
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.cmake  Makefile.am  Makefile.in
mqmx/: CMakeLists.txt  Makefile.am  Makefile.in  Message.h  MessageQueue.cpp  MessageQueue.h  MessageQueuePoll.cpp  MessageQueuePoll.h  MessageQueuePool.cpp  MessageQueuePool.h  Types.h  WaitTimeProvider.cpp  libexport.h.in  message.h  message_queue.cpp  message_queue.h  message_queue_poll.cpp  message_queue_poll.h  message_queue_pool.cpp  message_queue_pool.h  types.h  wait_time_provider.cpp  wait_time_provider.h  work_queue.cpp  work_queue.h
mqmx/testing/: work_queue_for_tests.cpp  work_queue_for_tests.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  MessageQueueListener.cpp  MessageQueueListenerMoveAssignment.cpp  MessageQueueListenerMoveCtor.cpp  MessageQueuePoll.cpp  MessageQueuePollAbsTimeout.cpp  MessageQueuePollInfiniteWait.cpp  MessageQueuePollInitialNotification.cpp  MessageQueuePollRelTimeout.cpp  MessageQueuePollSanity.cpp  MessageQueuePollSanityChecks.cpp  MessageQueuePool.cpp  MessageQueueSanity.cpp  MessageQueueSanityChecks.cpp  message_queue.cpp  message_queue_basic_listener.cpp  message_queue_listener.cpp  message_queue_listener_basic.cpp  message_queue_listener_data_and_closed.cpp  message_queue_listener_detached_because_of_move_assignment.cpp  message_queue_listener_detached_because_of_move_ctor.cpp  message_queue_listener_move_assignment.cpp  message_queue_listener_move_ctor.cpp  message_queue_poll.cpp  message_queue_poll_abs_timeout.cpp  message_queue_poll_absolute_timeout.cpp  message_queue_poll_infinite_wait.cpp  message_queue_poll_initial_notification.cpp  message_queue_poll_initial_notifications.cpp  message_queue_poll_listener.cpp  message_queue_poll_rel_timeout.cpp  message_queue_poll_relative_timeout.cpp  message_queue_poll_sanity.cpp  message_queue_pool.cpp  message_queue_sanity.cpp  work_queue_cancel_work.cpp  work_queue_for_tests_cancel_client_works.cpp  work_queue_for_tests_cancel_work.cpp  (+8 more)
test/fixture/: poll.h
test/fixtures/: MessageQueuePoll.cpp  MessageQueuePoll.h  message_queue_poll.cpp  message_queue_poll.h  poll.h
test/helpers/: work_queue_for_tests.cpp  work_queue_for_tests.h
test/mocks/: MessageQueueListener.cpp  MessageQueueListener.h  message_queue_listener.cpp  message_queue_listener.h
test/stub/: listener.h
test/stubs/: listener.h
